Bug 156593 - FILEOPEN PPTX: image shown in full instead of cropped
Summary: FILEOPEN PPTX: image shown in full instead of cropped
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
7.2.7.2 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2023-08-03 11:16 UTC by Gerald Pfeifer
Modified: 2023-10-30 10:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.40 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-08-03 11:16 UTC, Gerald Pfeifer
Details
Visual comparison Office 365 (top) vs LibreOffice (bottom) (37.04 KB, image/png)
2023-08-03 11:19 UTC, Gerald Pfeifer
Details
The example file in PP 2016 and Impress master (121.27 KB, image/png)
2023-09-04 12:16 UTC, Gabor Kelemen (Collabora)
Details
Minimized example file, only with 2 cropped tiff images (1.18 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-09-04 19:39 UTC, Gabor Kelemen (Collabora)
Details
The minimized example file in PP 2016 and Impress (121.27 KB, image/png)
2023-09-04 19:39 UTC, Gabor Kelemen (Collabora)
Details
The minimized example file in PP 2016 and Impress (105.03 KB, image/png)
2023-09-04 19:41 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-08-03 11:16:07 UTC
Created attachment 188743 [details]
Sample slide (PPTX)

Open the attached PPTX and observe that, unlike in Office 365, there is
text (which is part of the logo) "Rancher" that shows next to the cow, 
and the logo is horizontally compressed due to that.


It appears Office and LibreOffice prior to version 7.2 crop the logo,
whereas newer versions do not.


This is a regression between LibreOffice 7.1 and 7.2.

6.4 and Version: 7.1.8.0.0+ / LibreOffice Community
  Build ID: 4784990eda6098f0408276b4d424e81382a50460
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-1, Time: 2021-10-15_11:37:03
are fine

Whereas Version: 7.2.8.0.0+ / LibreOffice Community
  Build ID: d293877ff029ae7c161ccfbade992485fd92fe75
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2022-04-26_20:29:27
and Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 47ca3f1f762352b488d58b3bf23d5776576f1cca
  CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
are not.
Comment 1 Gerald Pfeifer 2023-08-03 11:19:11 UTC
Created attachment 188744 [details]
Visual comparison Office 365 (top) vs LibreOffice (bottom)
Comment 2 Gabor Kelemen (Collabora) 2023-08-03 13:25:41 UTC
Seems to have started in 7.2 with

https://git.libreoffice.org/core/+/c6bf16909db054ec5467ebdc0ea0c9dc07307048%5E%21/#F0
author	Xisco Fauli <xiscofauli@libreoffice.org>	Mon Mar 08 11:03:11 2021 +0100
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Thu Mar 11 15:01:40 2021 +0100

Revert "tdf#118133 DOCX import: disable lazy-loading of tiff images"

Opening the file as archive the rancher logo is indeed a .tiff image.
Comment 3 Gabor Kelemen (Collabora) 2023-09-04 12:15:29 UTC
In current nightly - possibly related to the fix of bug 147704 - the logo is not appearing as non-cropped and compressed anymore, but it's not visible at all.
Comment 4 Gabor Kelemen (Collabora) 2023-09-04 12:16:11 UTC
Created attachment 189336 [details]
The example file in PP 2016 and Impress master

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cc7d6211bc01e5ec84dbad542605d2e93dea925c
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 5 Gabor Kelemen (Collabora) 2023-09-04 19:39:13 UTC
Created attachment 189347 [details]
Minimized example file, only with 2 cropped tiff images

Interestingly this file minimized file produces the error, but changing the crop area somewhat (to be larger) makes the image partially visible, see the Picture 2.
Comment 6 Gabor Kelemen (Collabora) 2023-09-04 19:39:51 UTC Comment hidden (obsolete)
Comment 7 Gabor Kelemen (Collabora) 2023-09-04 19:41:59 UTC
Created attachment 189349 [details]
The minimized example file in PP 2016 and Impress

eh, correct file now :)
Comment 8 Commit Notification 2023-10-27 10:29:08 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c3ce373227433f40d686847a22e78651bedbab24

tdf#156593 FILEOPEN OOXML: image shown in full instead of cropped

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gerald Pfeifer 2023-10-28 09:36:12 UTC
Thank you, Balazs. Happy to report both my original test case and
Gabor's alternate test case now show as in PowerPoint:

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 7fff4e2ca6739928f72e5f0d2eb5820823916769
  CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 10 Commit Notification 2023-10-30 10:43:43 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ba46f840fd0bf75aa71d4a5c3ab45204396e3948

tdf#156593 FILEOPEN OOXML: image shown in full instead of cropped

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.