tdf#156593 FILEOPEN OOXML: image shown in full instead of cropped

Revert "Revert "tdf#118133 DOCX import: disable lazy-loading of tiff images""

This reverts commit c6bf16909db054ec5467ebdc0ea0c9dc07307048.

Lazy-loading doesn't work with cropped TIFF images, because in case of Lazy-load TIFF images
we are using MapUnit::MapPixel, but in case of cropped images we are using MapUnit::Map100thMM
and the crop values are relative to original bitmap size.

Change-Id: I2dbf6caf08d7899ec2eae683996d997809d62b89
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158509
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>